[package]
name = "cpucycles-sys"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0-only"
description = "FFI bindings to libcpucycles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.53.1"
copy_dir = "0.1"
